Adding navigation to the site

--- a/PieShop/PieShop/Views/Home/Index.cshtml
+++ b/PieShop/PieShop/Views/Home/Index.cshtml
@@ -1,9 +1,5 @@
-﻿@model PieShop.ViewModels.HomeViewModel
+﻿@model HomeViewModel
 
-
-@{
-    Layout = "_Layout";
-}
 
 
 <h2>@Model.Title</h2>
@@ -12,15 +8,13 @@
 {
     <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
+            <img src="@pie.ImageThumbnailUrl" alt="">
             <div class="caption">
-                <img src="@pie.ImageThumbnailUrl" alt="imageOfPie" />
-                <h3 class="pull-right"> @pie.Price.ToString("c")</h3>
+                <h3 class="pull-right">@pie.Price.ToString("c")</h3>
                 <h3>
-                    @pie.Name
+                    <a asp-controller="Home" asp-action="Details" asp-route-id="@pie.Id">@pie.Name</a>
                 </h3>
-                <p>
-                    @pie.ShortDescription
-                </p>
+                <p>@pie.ShortDescription</p>
             </div>
         </div>
     </div>
