--- a/PieShop/PieShop/Views/Shared/_Layout.cshtml
+++ b/PieShop/PieShop/Views/Shared/_Layout.cshtml
@@ -3,12 +3,24 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
     <link href="~/content/site.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
-    <title>@ViewBag.Title</title>
+
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Pie Shop</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container body-content">
         <div class="row">
             @RenderBody()
