--- a/PieShop/PieShop/Views/Home/Details.cshtml
+++ b/PieShop/PieShop/Views/Home/Details.cshtml
@@ -1,21 +1,21 @@
 ﻿@model Pie
 
-
-<h2>@Model.Name</h2>
-
 <div class="thumbnail">
     <div class="caption">
-        <img src="@Model.ImageUrl" alt="@Model.Name" "  />
+        <img src="@Model.ImageUrl" alt="@Model.Name"/>
         <div class="caption-full">
-            <h3 class="pull-right"> @Model.Price.ToString("c")</h3>
             <h3>
-                <a href="#">@Model.Name</a>
+                @Model.Name
             </h3>
             <h4>@Model.ShortDescription</h4>
             <p>
                 @Model.LongDescription
             </p>
+            <h3 style="text-align:right;">Price: @Model.Price.ToString("c")</h3>
+
         </div>
     </div>
 </div>
+
+
 
